# qpycr

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: qpycr.py
src/qpycr/: qpycr.py
