[build-system]
requires = ["setuptools>=61.0", "numpy>=1.23.2", "pandas>=1.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "qPyCR"
version = "0.0.2"
authors = [
  { name="Frederick De Baene", email="frederick.debaene@hotmail.com" },
]
description = "A Python package to analyze qPCR data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fredebaene/qpycr"
"Bug Tracker" = "https://github.com/fredebaene/qpycr/issues"